[project]
name = "kamernet-radar"
version = "1.0.0"
description = "Real-time Kamernet rental scraper with LLM-powered scoring and notifications anywhere."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32,<3",
    "psycopg[binary]>=3.2,<4",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.6,<3",
    "pyyaml>=6.0,<7",
    "discord-webhook>=1.3,<2",
    "apprise>=1.9,<2",
]

[project.optional-dependencies]
dev = ["ruff>=0.6,<1", "pytest>=8,<10"]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["radar"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line too long (ruff format handles layout)
    "B008",  # function calls in defaults (fine for pydantic Field(...))
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"
